# vault-conductor

./: .gitignore  CONTEXT.md  README.md  main.py  pyproject.toml  setup.sh  skills-lock.json
docs/: implementation-plan.md
docs/adr/: 0001-control-room-profile-boundary.md  0002-automatic-pr-handoff.md  0003-watch-daemon-observes-agent-triggered-actions.md  0004-hand-maintain-agent-control-room-skill.md
skills/agent-control-room/: SKILL.md
tests/: conftest.py  test_cmux_adapter.py  test_commands.py  test_config.py  test_engine.py  test_kanban.py  test_skill_package.py  test_watch.py  test_worktree_failures.py
vault_conductor/: activity.py  agents.py  cli.py  cmux.py  commands.py  config.py  constants.py  dashboard.py  engine.py  git_ops.py  kanban.py  main.py  markdown.py  operational_log.py  repos.py  run_notes.py  sessions.py  tasks.py  watch.py
