[project]
name = "vault-conductor"
version = "0.1.0"
description = "Obsidian kanban to cmux workspace orchestrator"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
orchestrator = "vault_conductor.main:main"
dashboard = "vault_conductor.dashboard:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vault_conductor"]
