[project]
name = "vault-conductor"
version = "0.1.0"
description = "Obsidian kanban to cmux workspace orchestrator"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
conductor = "vault_conductor.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["vault_conductor"]
force-include = { "skills/agent-control-room" = "skills/agent-control-room" }
